--- a/03/index.html
+++ b/03/index.html
@@ -36,103 +36,103 @@
           <th style="width: 27%;">ラテン文字転写</th>
         </tr>
         <tr>
-          <td>А</td><td></td><td></td><td>A</td>
+          <td>А</td>А<td></td><td>а</td><td>A</td>
         </tr>
         <tr>
-          <td>Б</td><td></td><td></td><td>B</td>
+          <td>Б</td><td>Б/td><td></td><td>B</td>
         </tr>
         <tr>
-          <td>В</td><td></td><td></td><td>V</td>
+          <td>В</td><td>В</td><td></td><td>V</td>
         </tr>
         <tr>
-          <td>Г</td><td></td><td></td><td>G</td>
+          <td>Г</td><td>Г</td><td></td><td>G</td>
         </tr>
         <tr>
-          <td>Д</td><td></td><td></td><td>D</td>
+          <td>Д</td><td>Д</td><td>д</td><td>D</td>
         </tr>
         <tr>
-          <td>Е</td><td></td><td></td><td>E</td>
+          <td>Е</td>Е<td></td><td>е</td><td>E</td>
         </tr>
         <tr>
-          <td>Ё</td><td></td><td></td><td>Ë</td>
+          <td>Ё</td><td>Ё</td><td>ë</td><td>Ë</td>
         </tr>
         <tr>
-          <td>Ж</td><td></td><td></td><td>Ž</td>
+          <td>Ж</td><td>Ж</td><td>ж</td><td>Ž</td>
         </tr>
         <tr>
-          <td>З</td><td></td><td></td><td>Z</td>
+          <td>З</td><td>З</td><td>з</td><td>Z</td>
         </tr>
         <tr>
-          <td>И</td><td></td><td></td><td>I</td>
+          <td>И</td><td>И</td><td>и</td><td>I</td>
         </tr>
         <tr>
-          <td>Й</td><td></td><td></td><td>J</td>
+          <td>Й</td><td>Й</td><td>й</td><td>J</td>
         </tr>
         <tr>
-          <td>К</td><td></td><td></td><td>K</td>
+          <td>К</td><td>К</td><td>к</td><td>K</td>
         </tr>
         <tr>
-          <td>Л</td><td></td><td></td><td>L</td>
+          <td>Л</td><td>Л</td><td>л</td><td>L</td>
         </tr>
         <tr>
-          <td>М</td><td></td><td></td><td>M</td>
+          <td>М</td><td>М</td><td>м</td><td>M</td>
         </tr>
         <tr>
-          <td>Н</td><td></td><td></td><td>N</td>
+          <td>Н</td><td>Н</td><td>н</td><td>N</td>
         </tr>
         <tr>
-          <td>О</td><td></td><td></td><td>O</td>
+          <td>О</td><td>О</td><td>о</td><td>O</td>
         </tr>
         <tr>
-          <td>П</td><td></td><td></td><td>P</td>
+          <td>П</td><td>П</td><td>п</td><td>P</td>
         </tr>
         <tr>
-          <td>Р</td><td></td><td></td><td>R</td>
+          <td>Р</td><td>Р</td><td>р</td><td>R</td>
         </tr>
         <tr>
-          <td>С</td><td></td><td></td><td>S</td>
+          <td>С</td><td>С</td><td>с</td><td>S</td>
         </tr>
         <tr>
-          <td>Т</td><td></td><td></td><td>T</td>
+          <td>Т</td><td>Т</td><td>т</td><td>T</td>
         </tr>
         <tr>
-          <td>У</td><td></td><td></td><td>U</td>
+          <td>У</td><td>У</td><td>у</td><td>U</td>
         </tr>
         <tr>
-          <td>Ф</td><td></td><td></td><td>F</td>
+          <td>Ф</td><td>Ф</td><td>ф</td><td>F</td>
         </tr>
         <tr>
-          <td>Х</td><td></td><td></td><td>CH</td>
+          <td>Х</td><td>Х</td><td>х</td><td>CH</td>
         </tr>
         <tr>
-          <td>Ц</td><td></td><td></td><td>C</td>
+          <td>Ц</td><td>Ц</td><td>ц</td><td>C</td>
         </tr>
         <tr>
-          <td>Ч</td><td></td><td></td><td>&#x10C;</td>
+          <td>Ч</td><td>Ч</td><td>ч</td><td>&#x10C;</td>
         </tr>
         <tr>
-          <td>Ш</td><td></td><td></td><td>&Scaron;</td>
+          <td>Ш</td><td>Ш</td><td>ш</td><td>&Scaron;</td>
         </tr>
         <tr>
-          <td>Щ</td><td></td><td></td><td>&Scaron;&Ccaron;</td>
+          <td>Щ</td><td>Щ</td><td>щ</td><td>&Scaron;&Ccaron;</td>
         </tr>
         <tr>
-          <td>Ъ</td><td></td><td></td><td>ʺ</td>
+          <td>Ъ</td><td>Ъ</td><td>ъ</td><td>ʺ</td>
         </tr>
         <tr>
-          <td>Ы</td><td></td><td></td><td>Y</td>
+          <td>Ы</td><td>Ы</td><td>ы</td><td>Y</td>
         </tr>
         <tr>
-          <td>Ь</td><td></td><td></td><td>ʹ</td>
+          <td>Ь</td><td>Ь</td><td>ь</td><td>ʹ</td>
         </tr>
         <tr>
-          <td>Э</td><td></td><td></td><td>&#x116;</td>
+          <td>Э</td><td>Э</td><td>э</td><td>&#x116;</td>
         </tr>
         <tr>
-          <td>Ю</td><td></td><td></td><td>ju</td>
+          <td>Ю</td><td>Ю</td><td>ю</td><td>ju</td>
         </tr>
         <tr>
-          <td>Я</td><td></td><td></td><td>ja</td>
+          <td>Я</td><td>Я</td><td>я</td><td>ja</td>
         </tr>
     </table>
   </body>
