--- a/03/index.html
+++ b/03/index.html
@@ -135,5 +135,47 @@
           <td>Я</td><td>Я</td><td>я</td><td>ja</td>
         </tr>
     </table>
+    <h1 id="d">ロシア語(表音)で入力する際には</h1>
+    <p>上の表を作成する際に入力することに手こずったので</p>
+    <p>ロシア語(表音)で入力する際のキーボードの対応を表にまとめたいと思います</p>
+    <table border="1" style="width: 100%;text-align:center;">
+      <tr>
+        <th>入力したい文字</th>
+        <th>入力の仕方</th>
+      </tr>
+      <tr>А<td></td><td>Shift + A</td></tr>
+      <tr>Б<td></td><td>Shift + B</td></tr>
+      <tr>В<td></td><td>Shift + </td></tr>
+      <tr>Г<td></td><td>Shift + G</td></tr>
+      <tr>Д<td></td><td>Shift + D</td></tr>
+      <tr>Е<td></td><td>Shift + E</td></tr>
+      <tr>Ё<td></td><td>Shift + 3<br>Shift + 4</td></tr>
+      <tr>Ж<td></td><td></td></tr>
+      <tr>З<td></td><td></td></tr>
+      <tr>И<td></td><td></td></tr>
+      <tr>Й<td></td><td></td></tr>
+      <tr>К<td></td><td></td></tr>
+      <tr>Л<td></td><td></td></tr>
+      <tr>М<td></td><td></td></tr>
+      <tr>Н<td></td><td></td></tr>
+      <tr>О<td></td><td></td></tr>
+      <tr>П<td></td><td></td></tr>
+      <tr>Р<td></td><td></td></tr>
+      <tr>С<td></td><td></td></tr>
+      <tr>Т<td></td><td></td></tr>
+      <tr>У<td></td><td></td></tr>
+      <tr>Ф<td></td><td></td></tr>
+      <tr>Х<td></td><td></td></tr>
+      <tr>Ц<td></td><td></td></tr>
+      <tr>Ч<td></td><td></td></tr>
+      <tr>Ш<td></td><td></td></tr>
+      <tr>Щ<td></td><td></td></tr>
+      <tr>Ъ</tr><td></td><td></td></tr>
+      <tr>Ы<td></td><td></td></tr>
+      <tr>Ь<td></td><td></td></tr>
+      <tr>Э<td></td><td></td></tr>
+      <tr>Ю<td></td><td></td></tr>
+      <tr>Я<td></td><td></td></tr>
+    </table>
   </body>
 </html>
