--- a/03/index.html
+++ b/03/index.html
@@ -143,39 +143,39 @@
         <th>入力したい文字</th>
         <th>入力の仕方</th>
       </tr>
-      <tr>А<td></td><td>A</td></tr>
-      <tr>Б<td></td><td>B</td></tr>
-      <tr>В<td></td><td>W</td></tr>
-      <tr>Г<td></td><td>G</td></tr>
-      <tr>Д<td></td><td>D</td></tr>
-      <tr>Е<td></td><td>E</td></tr>
-      <tr>Ё<td></td><td>Shift + 3<br>Shift + 4</td></tr>
-      <tr>Ж<td></td><td>V</td></tr>
-      <tr>З<td></td><td>Z</td></tr>
-      <tr>И<td></td><td>I</td></tr>
-      <tr>Й<td></td><td>J</td></tr>
-      <tr>К<td></td><td>K</td></tr>
-      <tr>Л<td></td><td>L</td></tr>
-      <tr>М<td></td><td>M</td></tr>
-      <tr>Н<td></td><td>N</td></tr>
-      <tr>О<td></td><td>O</td></tr>
-      <tr>П<td></td><td>P</td></tr>
-      <tr>Р<td></td><td>R</td></tr>
-      <tr>С<td></td><td>S</td></tr>
-      <tr>Т<td></td><td>T</td></tr>
-      <tr>У<td></td><td>U</td></tr>
-      <tr>Ф<td></td><td>F</td></tr>
-      <tr>Х<td></td><td>H</td></tr>
-      <tr>Ц<td></td><td>C</td></tr>
-      <tr>Ч<td></td><td>^</td></tr>
-      <tr>Ш<td></td><td>&#64;</td></tr>
-      <tr>Щ<td></td><td>&#123;</td></tr>
-      <tr>Ъ<td><td></td></td></tr>
-      <tr>Ы<td></td><td>Y</td></tr>
-      <tr>Ь<td></td><td></td></tr>
-      <tr>Э<td></td><td>&#123;</td></tr>
-      <tr>Ю<td></td><td>半角&#47;全角</td></tr>
-      <tr>Я<td></td><td>Q</td></tr>
+      <tr>А<td>А</td><td>A</td></tr>
+      <tr>Б<td>Б</td><td>B</td></tr>
+      <tr>В<td>В</td><td>W</td></tr>
+      <tr>Г<td>Г</td><td>G</td></tr>
+      <tr>Д<td>Д</td><td>D</td></tr>
+      <tr>Е<td>Е</td><td>E</td></tr>
+      <tr>Ё<td>Ё</td><td>Shift + 3<br>Shift + 4</td></tr>
+      <tr>Ж<td>Ж</td><td>V</td></tr>
+      <tr>З<td>З</td><td>Z</td></tr>
+      <tr>И<td>И</td><td>I</td></tr>
+      <tr>Й<td>Й</td><td>J</td></tr>
+      <tr>К<td>К</td><td>K</td></tr>
+      <tr>Л<td>Л</td><td>L</td></tr>
+      <tr>М<td>М</td><td>M</td></tr>
+      <tr>Н<td>Н</td><td>N</td></tr>
+      <tr>О<td>О</td><td>O</td></tr>
+      <tr>П<td>П</td><td>P</td></tr>
+      <tr>Р<td>Р</td><td>R</td></tr>
+      <tr>С<td>С</td><td>S</td></tr>
+      <tr>Т<td>Т</td><td>T</td></tr>
+      <tr>У<td>У</td><td>U</td></tr>
+      <tr>Ф<td>Ф</td><td>F</td></tr>
+      <tr>Х<td>Х</td><td>H</td></tr>
+      <tr>Ц<td>Ц</td><td>C</td></tr>
+      <tr>Ч<td>Ч</td><td>^</td></tr>
+      <tr>Ш<td>Ш</td><td>&#64;</td></tr>
+      <tr>Щ<td>Щ</td><td>&#123;</td></tr>
+      <tr>Ъ<td>Ъ<td></td>Shift + 6</td></tr>
+      <tr>Ы<td>Ы</td><td>Y</td></tr>
+      <tr>Ь<td>Ь</td><td></td></tr>
+      <tr>Э<td>Э</td><td>&#123;</td></tr>
+      <tr>Ю<td>Ю</td><td>半角&#47;全角</td></tr>
+      <tr>Я<td>Я</td><td>Q</td></tr>
     </table>
   </body>
 </html>
