--- a/03/index.html
+++ b/03/index.html
@@ -170,10 +170,10 @@
       <tr>Ч<td>Ч</td><td>^</td></tr>
       <tr>Ш<td>Ш</td><td>&#64;</td></tr>
       <tr>Щ<td>Щ</td><td>&#123;</td></tr>
-      <tr>Ъ<td>Ъ<td></td>Shift + 6</td></tr>
+      <tr>Ъ<td>Ъ</td><td>Shift + 6</td></tr>
       <tr>Ы<td>Ы</td><td>Y</td></tr>
-      <tr>Ь<td>Ь</td><td></td></tr>
-      <tr>Э<td>Э</td><td>&#123;</td></tr>
+      <tr>Ь<td>Ь</td><td>X</td></tr>
+      <tr>Э<td>Э</td><td>&#125;</td></tr>
       <tr>Ю<td>Ю</td><td>半角&#47;全角</td></tr>
       <tr>Я<td>Я</td><td>Q</td></tr>
     </table>
