--- a/03/index.html
+++ b/03/index.html
@@ -170,7 +170,7 @@
       <tr><td>Ч</td><td>^</td></tr>
       <tr><td>Ш</td><td>&#64;</td></tr>
       <tr><td>Щ</td><td>&#123;</td></tr>
-      <tr><td>Ъ</td><td>Shift + 6</td></tr>
+      <tr><td>Ъ</td><td>Shift + 5<br>Shift + 6</td></tr>
       <tr><td>Ы</td><td>Y</td></tr>
       <tr><td>Ь</td><td>X</td></tr>
       <tr><td>Э</td><td>&#125;</td></tr>
