--- a/03/index.html
+++ b/03/index.html
@@ -15,6 +15,8 @@
       <a href="#a">・記事作成にあたって</a><br>
       <a href="#b">・またロシア…?</a><br>
       <a href="#c">・一覧表</a><br>
+      <a href="#d">・ロシア語(表音)で入力する際には</a><br>
+      <a href="#e">・まとめ</a><br>
     </div>
     <h1 id="a">記事作成にあたって</h1>
     <p>この記事は、<a href="https://creativecommons.org/licenses/by-sa/4.0/">クリエイティブ・コモンズ 表示-継承 4.0 国際 パブリック・ライセンス</a>のもとで公表されたウィキペディアの項目<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">「キリル文字一覧」</a>、<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">「ロシア語のラテン文字表記法」</a>を素材として二次利用しています。</p>
@@ -177,5 +179,13 @@
       <tr><td>Ю</td><td>半角&#47;全角</td></tr>
       <tr><td>Я</td><td>Q</td></tr>
     </table>
+    <h1 id="e">まとめ</h1>
+    <p>このページをまとめて多少キリル文字の知識が深まりました</p>
+    <p>Спасибо за прочтение.(ラテン文字転写:Spacibo za prochtenie.)</p>
+    <p>(日本語訳:読んでいただきありがとうございます。)</p>
+    <p>では、この辺で。</p>
+    <div style=background:#ffd700>
+    <a href="https://kei-glasses.github.io/00">HOMEへ</a>
+    </div>
   </body>
 </html>
