--- a/03/index.html
+++ b/03/index.html
@@ -26,10 +26,10 @@
     <p>(前回のソ連といい今回のキリル文字といい、ちょっと思想が偏っていそう)</p>
     <p>学術的好奇心でキリル文字を学びたいのでこの記事を書いておこうと思います</p>
     <p>※ロシア語で使用されているキリル文字をまとめた記事となっています</p>
-    <p>  他の言語で使用されているキリル文字も知りたい場合には<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">Wikipedia「キリル文字一覧」</a>をご参照していただきたいです</p>
+    <p>  他の言語で使用されているキリル文字も知りたい場合には<a href="http://ja.wikipedia.org/wiki/キリル文字一覧">Wikipedia「キリル文字一覧」</a>を参照して下さい</p>
     <h1 id="c">一覧表</h1>
     <p>※下の表でのラテン文字転写は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>の変換表のISO/R 9:1968をラテン文字転写とさせていただきます</p>
-    <p>他のラテン文字転写を知りたい場合は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>をご参照していただきたいです</p>
+    <p>他のラテン文字転写を知りたい場合は<a href="http://ja.wikipedia.org/wiki/ロシア語のラテン文字表記法">Wikipedia「ロシア語のラテン文字表記法」</a>を参照して下さい</p>
     <table border="1" style="width: 100%;text-align:center;">
         <tr>
           <th style="width: 19%;">&emsp;</th>
